# butterfly

./: CMakeLists.txt  main.cpp  scc_iob.h  scc_str.cc  scc_str.h
